    can be used to set JDBC driver connection properties. This option may
    be provided more than once to set multiple properties.

  * The \connect command now provides a --update option to update the settings
    on an existing connection.

  * Added --timeout (-t) flag to the \go command to specify a timeout period
    (in seconds). 
  
Changed Behavior
  * The "$expand" variable now defaults to false, meaning that by default
    variables are no longer expanded in SQL statements. After some thought
    I decided this behavior was too dangerous to leave on by default as 
    a "$" is meaningful on some platforms and could break/confuse things. Note
    that this does not impact variable expansion on jsqsh command line commands, 
    that remains in effect.
    
  * Footer information (#rows processed and timing) is now displayed
    to stderr so that this information isn't written to the output file
    if the output is redirected.  Use 2>&1 if you want to write this to
    your output file now.
    
  * The default display style for timestamp and date have changed
    to the ISO standard of yyyy-mm-dd hh:mm:ss.fff and yyy-mm-dd
    respectively.
   
  * The behavior of setting $style is slightly different now, and is documented
    in the help for style. The support styles vary based upon the session type
    (e.g. a JDBC session vs. a Jaql session). Setting a SQL style with no
    session started, or a SQL session started sets it globally for all session.
    Jaql styles can only be applied during a jaql session, and only sets the
    value locally for the jaql session.
    
  * Upgraded to jline-2.8. JLine is an almost pure java line editing library, 
    similar to readline.  This version of jline adds support for most of the 
    basic "vi" command set. It is important to note that this version of jline
    will recognize and try to honor settings in your ".inputrc" file if you
    have any set.
    